--- a/packages/api/pubspec.yaml
+++ b/packages/api/pubspec.yaml
@@ -10,11 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  retrofit: ^3.3.1
+  retrofit_generator: ^4.2.0
+  json_serializable: ^6.6.1
+  dio: ^4.0.6
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
