fluxパッケージにOpenAI用APIのRepositoryクラス追加

--- a/packages/flux/pubspec.yaml
+++ b/packages/flux/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # package path
+  api:
+    path: ../api
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
