--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+# Open AI API Config
+open_ai_api_config.dart
