Pub get でappパッケージのnameが引っかかったので修正

--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: simple_ai_chat
+name: app
 description: Simple AI Chat App.
 
 # The following line prevents the package from being accidentally published to
