--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -31,6 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # localize
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
 
   flutter_hooks: ^0.18.5+1
   flutter_riverpod: ^2.1.1
@@ -40,9 +44,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # package path
+  common:
+    path: ../common
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +71,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
