--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -75,7 +75,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
+    - assets/logo_d.png
+    - assets/logo_l.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
