各パッケージに必要なライブラリを追加、gitignoreにFirebase関連の設定ファイルを追加

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,11 @@ open_ai_api_config.dart
 open_ai_create_completion_sample_response.json
 open_ai_model_list_sample_response.json
 open_ai_retrieve_model_sample_response.json
+
+# firebase
+google-services.json
+GoogleService-Info.plist
+firebase_app_id_file.json
+firebase_options.dart
+
+
