--- a/packages/flux/pubspec.yaml
+++ b/packages/flux/pubspec.yaml
@@ -11,14 +11,29 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # hooks riverpod
+  flutter_hooks:
+  flutter_riverpod:
+  # firebase
+  firebase_core:
+  firebase_auth:
+  # data
+  dio:
+  freezed:
+  freezed_annotation:
+  json_serializable:
+
   # package path
   api:
     path: ../api
+  model:
+    path: ../model
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints:
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
