--- a/packages/api/pubspec.yaml
+++ b/packages/api/pubspec.yaml
@@ -10,18 +10,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  retrofit: ^3.3.1
-  retrofit_generator: ^4.2.0
-  json_serializable: ^6.6.1
-  dio: ^4.0.6
-  freezed: ^2.3.2
-  freezed_annotation: ^2.2.0
+  retrofit:
+  retrofit_generator:
+  # data
+  dio:
+  freezed:
+  freezed_annotation:
+  json_serializable:
+  # hooks riverpod
+  flutter_hooks:
+  flutter_riverpod:
+  # firebase
+  firebase_auth:
+
+  #path
+  model:
+    path:  ../model
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
+  flutter_lints:
+  build_runner:
 
 
 # For information on the generic Dart part of this file, see the
