--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -35,32 +35,39 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
-  flutter_hooks: ^0.18.5+1
-  flutter_riverpod: ^2.1.1
+  # hooks & riverpod
+  flutter_hooks:
+  flutter_riverpod:
+  # firebase
+  firebase_core:
+  firebase_auth:
+  firebase_storage:
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons:
 
   # package path
   common:
     path: ../common
   model:
     path: ../model
+  flux:
+    path: ../flux
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.3.3
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
