--- a/packages/common/pubspec.yaml
+++ b/packages/common/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   hooks_riverpod: ^2.1.1
   # widget
   loading_animation_widget: ^1.2.0+4
+  # firebase
+  firebase_crashlytics: 
 
   app:
     path: ../app
